--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ input[type=submit]:hover{
     background-color: rgb(85, 231, 85);
     margin: 2px;
     height: 40px;
-    width: 380px;
+    width: auto;
     border: 0px solid black;
     color: white;
     box-shadow: 5px;
